started problem 50; created a dedicated file for isPrime function and import from there

--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
   "homepage": "https://github.com/luishong07/ProjectEuler#readme",
   "devDependencies": {
     "jest": "^29.4.1"
-  }
+  },
+  "type": "module"
+
 }
